--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ body {
   margin: 0;
   padding: 0;
   background-color: #AF94E0;
+  overflow-x: hidden;
+}
+
+
+.white{
+    color: white;
 }
 
 header {
@@ -102,9 +108,24 @@ header {
     }
 }
 
+.section__agression-text  {
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 900px;
+    top: 100px;
+}
+
+.section__agression-text h1 {
+    font-size: 4rem;
+    font-family: 'Bison', sans-serif;
+}
+
 .section {
     scroll-snap-align: center;
     height: 100vh;
+    width: 100vw;
   }
   
   .section:nth-of-type(1) {
@@ -117,4 +138,66 @@ header {
 
     .section:nth-of-type(3) {
         background-color: #2A114B;
+    }
+
+    /* Code du footer pour une largeur minimum de 1113 pixel */
+
+    footer {
+        width: 100vw;
+        background-color: #110521;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        scroll-snap-align: end;
+        font-family: 'Bison', sans-serif;
+
+    }
+    
+    .footer__container {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .footer__container-title {
+        padding-left: 100px;
+        color: #AF94E0;
+    }
+
+    .footer__title--name {
+        position: relative;
+        top: -30px;
+    }
+
+    .footer__container-credit {
+        padding-right: 100px;
+    }
+    
+    .footer__title {
+        margin: 0;
+    }
+    
+    .footer__title--name {
+        font-size: 10rem;
+    }
+    
+    .footer__title--h2 {
+        margin-top: 50px;
+        margin-bottom: 40px;
+    }
+    
+    .footer__list {
+        margin: 0;
+        text-align: right;
+    }
+    
+    .footer__list-component {
+        color: white;
+        list-style: none;
+        font-size: 2rem;
+        transition: all 0.5s ease-in-out;
+    }
+
+    .footer__list-component:hover {
+        color: #AF94E0;
+        cursor: pointer;
     }
