--- a/style.css
+++ b/style.css
@@ -203,6 +203,25 @@ header {
     width: 100vw;
 }
 
+/* === */
+
+.section__condamnation {
+    position: relative;
+}
+
+.section__condamnation-titre h1 {
+    font-size: 3rem;
+    font-family: 'Bebas', sans-serif;
+    color: #AF94E0;
+    margin: 0px;
+    position: absolute;
+    top: 75px;
+    right: 800px;
+    .white {
+        color: white;
+    }
+}
+
 .section:nth-of-type(1) {
     background-color: #967DC4;
 }
