--- a/style.css
+++ b/style.css
@@ -224,11 +224,15 @@ header {
     }
 }
 
-.section__condamnation-graph {
+.section__condamnation-graph  {
     width: 941px;
     height: 508px;
+}
+
+.section__condamnation-graph canvas {
     position: absolute;
     top: 250px;
+    left: 500px;
 }
 
 .section:nth-of-type(1) {
