--- a/style.css
+++ b/style.css
@@ -210,6 +210,27 @@ header {
 }
 
 
+.section__condamnation-info {
+    margin-bottom: 40px;
+    margin-left: 90px;
+    position: absolute;
+    top: 600px;
+}
+
+.section__condamnation-info h1 {
+    font-size: 4rem;
+    font-family: 'Bebas', sans-serif;
+    color: #AF94E0;
+    margin: 0px;
+}
+
+.section__condamnation-info h2 {
+    font-size: 2rem;
+    font-family: 'Bebas', sans-serif;
+    color: #AF94E0;
+    margin: 0px;
+}
+
 .section__condamnation-titre h1 {
     font-size: 3rem;
     font-family: 'Bebas', sans-serif;
@@ -234,6 +255,8 @@ header {
     top: 250px;
     left: 500px;
 }
+
+/* =============== */
 
 .section:nth-of-type(1) {
     background-color: #967DC4;
