--- a/style.css
+++ b/style.css
@@ -188,13 +188,7 @@ header {
     width: 400px;
 }
 
-.hidden {
-    visibility: hidden;
-}
 
-.visible {
-    visibility: visible;
-}
 
 /* === */
 .section {
@@ -245,6 +239,20 @@ header {
     }
 }
 
+.section__condamnation-titre h2 {
+    font-size: 2rem;
+    font-family: 'Bebas', sans-serif;
+    color: white;
+    margin: 0px;
+    position: absolute;
+    top: 200px;
+    left: 65px;
+
+    .white {
+        color: white;
+    }
+}
+
 .section__condamnation-graph  {
     width: 941px;
     height: 508px;
@@ -256,6 +264,15 @@ header {
     left: 500px;
 }
 
+
+
+.hidden {
+    visibility: hidden;
+}
+
+.visible {
+    visibility: visible;
+}
 /* =============== */
 
 .section:nth-of-type(1) {
