--- a/style.css
+++ b/style.css
@@ -215,7 +215,8 @@ header {
 
     .section__victime-graph {
         width: 900px;
-        height: 600px;
+        height: 75vh;
+        min-height: 400px;
         margin-left: 100px;
         margin-top: 25px;
     }
