--- a/style.css
+++ b/style.css
@@ -236,10 +236,22 @@ header {
 
         .line1 {
             font-size: 4.375rem;
+
+            span {
+                font-size: 4.375rem;
+            }
         }
 
         .line2 {
             font-size: 2.625rem;
+
+            span {
+                font-size: 2.625rem;
+            }
+        }
+
+        .purple {
+            color: #AF94E0;
         }
     }
 }
