Change sections width to adapt to screens

--- a/style.css
+++ b/style.css
@@ -116,7 +116,8 @@ header {
 /* CODE CSS DU PREMIER GRAPHIQUE */
 
 .section__agression {
-    position: relative  ;
+    position: relative;
+    width: 100vw;
 }
 
 .section__agression-text {
@@ -200,6 +201,7 @@ header {
 /* DEUXIEME GRAPHIQUE */
 .section_victime {
     position: relative;
+    width: 100vw;
 
     .section__victime-titre {
         margin-left: 100px;
@@ -260,6 +262,7 @@ header {
 
 .section__condamnation {
     position: relative;
+    width: 100vw;
 }
 
 
