--- a/style.css
+++ b/style.css
@@ -343,22 +343,49 @@ header {
     position: relative;
     width: 100vw;
 
+    .section__carte-titre {
+        width: fit-content;
+        color: white;
+        text-transform: uppercase;
+        font-family: 'Bebas', sans-serif;
+        font-size: 2rem;
+        margin: auto;
+        padding-top: 25px;
+
+        h2 {
+            margin: 0px;
+        }
+
+        .dark-purple {
+            color: #2A114B;
+        }
+    }
+
     .section__carte-info {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         right: 100px;
+        text-align: right;
+        color: white;
+        font-size: 2rem;
+        font-family: 'Bebas', sans-serif;
+
+        h3 {
+            font-family: 'Bebas', sans-serif;
+            color: #2A114B;
+            font-size: 2.5rem;
+            margin: 0px;
+        }
     }
 
     #map {
+        position: relative;
+        top: -50px;
         height: 100vh;
         width: 700px;
         margin-right: 200px;
         background-color: transparent;
-
-        .region-hovered {
-            fill: red; 
-        }
     }
 
 }
