--- a/style.css
+++ b/style.css
@@ -342,6 +342,7 @@ header {
 .section__carte {
     position: relative;
     width: 100vw;
+    background-color: #160133;
 
     .section__carte-titre {
         width: fit-content;
@@ -351,13 +352,14 @@ header {
         font-size: 2rem;
         margin: auto;
         padding-top: 25px;
+        letter-spacing: 2px;
 
         h2 {
             margin: 0px;
         }
 
-        .dark-purple {
-            color: #2A114B;
+        .purple {
+            color: #AF94E0;
         }
     }
 
@@ -373,7 +375,7 @@ header {
 
         h3 {
             font-family: 'Bebas', sans-serif;
-            color: #2A114B;
+            color: #AF94E0;
             font-size: 2.5rem;
             margin: 0px;
         }
