--- a/style.css
+++ b/style.css
@@ -338,26 +338,39 @@ header {
     left: 500px;
 }
 
-.section__condamnation button {
+.section__condamnation-button {
     position: relative;
     bottom: 250px;
     padding: 0;
     left: 65px;
-    height: 50px;
-    width: 50px;
+    display: flex;
+    justify-content: space-around;
+    height: 40px;
+    width: 150px;
+}
+
+.section__condamnation button {
+    /* height: 45px;*/
+    width: 40px; 
     background-color: white;
     border: none;
     border-radius: 5px;
-}
-
-.section__condamnation button img {
-    height: 30px;
-    width: 30px;
+    transition: all 0.2s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
 }
+
+.section__condamnation button:hover {
+    scale: 1.15;
+}
+
+.section__condamnation button img {
+    height: 25px;
+    width: 25px;
+
+}
+
 
 /* Section 4 */
 .section__carte {
