--- a/style.css
+++ b/style.css
@@ -210,36 +210,48 @@ header {
         color: #AF94E0;
         font-family: 'Bebas', sans-serif;
         font-size: 2rem;
+        letter-spacing: 2px;
 
         h1 {
             margin: 0px;
         }
     }
 
+    .section__victime-graph-info {
+        display: flex;
+        padding: 50px;
+        height: 85vh;
+    }
+
     .section__victime-graph {
         width: 900px;
-        height: 75vh;
+        height: 100%;
         min-height: 400px;
-        margin-left: 100px;
-        margin-top: 25px;
     }
 
     .section__victime-info {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        right: 100px;
-        text-align: right;
+        /* text-align: right; */
+        margin-left: 50px;
+        margin-right: 70px;
 
         .section__victime-info-action {
-            color: #AF94E0;
+            color: #ffffff;
             font-size: 2.5rem;
             font-family: 'Bebas', sans-serif;
 
             .purple {
                 font-size: 2.5rem;
-                color: #ffffff;
+                color: #AF94E0;
             }
+
+        }
+        
+        .section__victime-info-texte {
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.1rem;
+            font-weight: 400;
+            text-align: left;
         }
 
         span {
