--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ header {
     margin-bottom: 40px;
     margin-left: 90px;
     position: absolute;
-    top: 400px;
+    top: 300px;
 }
 
 .section__condamnation-info h1 {
@@ -309,6 +309,12 @@ header {
     font-family: 'Bebas', sans-serif;
     color: #AF94E0;
     margin: 0px;
+}
+
+.section__condamnation-info p {
+    color: #ffffff;
+    font-family: 'Alatsi', sans-serif;
+    width: 400px;
 }
 
 .section__condamnation-titre {
@@ -359,7 +365,6 @@ header {
 }
 
 .section__condamnation button {
-    /* height: 45px;*/
     width: 40px; 
     background-color: white;
     border: none;
