--- a/style.css
+++ b/style.css
@@ -389,9 +389,12 @@ header {
 .section__condamnation button img {
     height: 25px;
     width: 25px;
-
 }
 
+.section__condamnation-info a {
+    color: #AF94E0;
+    text-decoration: none;
+}
 
 /* Section 4 */
 .section__carte {
