--- a/style.css
+++ b/style.css
@@ -585,32 +585,80 @@ footer {
 }
 
 
-/* Page mentions légales */
-nav {
-    padding: 1rem;
-    width: 100%;
+/* Code d'affichage des pop up des mentions légales, sources et contact */
+
+/* Style général pour cacher la modale par défaut */
+.modal1, .modal2, .modal3 {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     display: flex;
-    justify-content: center;
     align-items: center;
-
-    a {
-        color: white;
-        text-decoration: none;
-        font-family: 'Bebas', sans-serif;
-        font-size: 5rem;
-
-        .cicatr {
-            color: #2A114B;
-        }
-    }
+    justify-content: center;
+    flex-direction: column;
+    background: rgba(45, 44, 44, 0.5);
+    transition: all .4s;
 }
 
-.mentions {
-    font-family: 'Montserrat', sans-serif;
-    width: 1000px;
-    margin: auto;
-
-    p {
-        font-weight: 500;
-    }
+.modal1:target, .modal2:target, .modal3:target {
+    visibility: visible;
+    opacity: 1;
 }
+
+  /* Contenu de la modale */
+    .mention, .sources, .contact {
+        overflow-y: scroll;
+        background-color: #fff;
+        margin: 15% auto;
+        padding: 20px;
+        border-radius: 8px;
+        width: 700px;
+        height: 700px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        animation: fadeIn 0.5s;
+        scroll-behavior: auto;
+        scroll-padding: 20px;
+        list-style: none;
+    }
+
+    .mention::-webkit-scrollbar-track {
+        border-radius: 8px;
+    }
+  
+  /* Bouton de fermeture */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+    position: sticky;
+    top: 2px;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+  }
+  
+
+
+  /* Animation d’apparition */
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
