--- a/style.css
+++ b/style.css
@@ -599,6 +599,10 @@ footer {
     cursor: pointer;
 }
 
+footer ul {
+    list-style-type: none;
+    padding: 0;
+}
 
 /* Code d'affichage des pop up des mentions légales, sources et contact */
 
@@ -607,16 +611,18 @@ footer {
     visibility: hidden;
     opacity: 0;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top: 0;
-    right: 0;
     bottom: 0;
     left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
     background: rgba(45, 44, 44, 0.5);
     transition: all .4s;
+
 }
 
 .modal1:target, .modal2:target, .modal3:target {
@@ -629,39 +635,33 @@ footer {
         overflow-y: scroll;
         background-color: #fff;
         margin: 15% auto;
-        padding: 20px;
+        padding: 30px;
         border-radius: 8px;
         width: 700px;
-        height: 700px;
+        height: 500px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         text-align: center;
         animation: fadeIn 0.5s;
         scroll-behavior: auto;
-        scroll-padding: 20px;
-        list-style: none;
     }
 
-    .mention::-webkit-scrollbar-track {
-        border-radius: 8px;
-    }
+        .contact {
+            height: 400px;
+            width: 400px;
+            overflow-y: hidden;
+        }
   
   /* Bouton de fermeture */
   .close {
-    color: #aaa;
+    color: #2A114B;
     float: right;
-    font-size: 28px;
-    font-weight: bold;
+    font-size: 2.5rem;
     cursor: pointer;
     text-decoration: none;
     position: sticky;
     top: 2px;
   }
   
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-  }
   
 
 
