--- a/style.css
+++ b/style.css
@@ -25,13 +25,13 @@ body {
     font-family: 'Alatsi', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #AF94E0;
+    background-color: #ffffff;
     overflow-x: hidden;
 }
 
 
-.white {
-    color: white;
+.light-purple {
+    color: #AF94E0;
 }
 
 header {
@@ -41,12 +41,35 @@ header {
 .header-title-img {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     height: 100vh;
-    gap: 50px;
+    width: 100vw;
+    padding: 0 200px;
+    position: relative;
+
 
     img {
-        height: 80%;
+        width: 70vw;
+        position: absolute;
+        bottom: -5px;
+        opacity: 0;
+        transform: translateY(50vh);
+        transition: opacity 0.5s ease, transform 1s ease;
+    }
+
+    img.animate {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    @keyframes slideUp {
+        0% {
+            transform: translateY(50vh);
+        }
+
+        100% {
+            transform: translateY(0);
+        }
     }
 
     h1 {
@@ -56,6 +79,7 @@ header {
         font-size: 3rem;
         display: flex;
         flex-direction: column;
+        margin-bottom: 200px;
 
 
         span {
@@ -85,20 +109,28 @@ header {
 }
 
 .presentation {
-    margin: 0 200px;
+    position: relative;
+    padding: 0 10px;
     scroll-snap-align: center;
     height: 100vh;
+    background-color: #AF94E0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
 
-    p {
-        font-size: 1.5rem;
-        color: white;
-        width: 75%;
+    .presentation-text {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        width: 50%;
 
-        a {
-            color: white
+        p {
+            font-size: 1.25rem;
+            color: white;
+
+            a {
+                color: white
+            }
         }
     }
 
@@ -114,6 +146,32 @@ header {
             color: white;
             position: relative;
             top: -25px;
+        }
+    }
+
+    /* img {
+        height: 75%;
+        margin: auto;
+    } */
+
+    svg {
+        margin: auto;
+    }
+
+    svg path {
+        fill: none;
+        fill-opacity: 0;
+        stroke: white;
+        stroke-width: 2;
+        stroke-dasharray: 1000;
+        stroke-dashoffset: 1000;
+        animation: draw 4s ease forwards;
+        transition: all 0.3s ease;
+    }
+
+    @keyframes draw {
+        to {
+            stroke-dashoffset: 0;
         }
     }
 }
@@ -417,7 +475,8 @@ header {
         padding-top: 25px;
         letter-spacing: 2px;
 
-        h2, h3 {
+        h2,
+        h3 {
             margin: 0px;
         }
 
@@ -427,10 +486,6 @@ header {
     }
 
     .section__carte-info {
-        /* position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        right: 100px; */
         text-align: right;
         color: white;
         font-size: 2rem;
@@ -442,41 +497,62 @@ header {
             font-size: 2.5rem;
             margin: 0px;
         }
+
+        p {
+            margin: 0;
+            padding: 0;
+        }
     }
 
     #map-container {
         width: 100vw;
         height: 90vh;
-        margin: auto;
+        margin: 0;
         display: flex;
-        gap: 20%;
+        justify-content: center;
+        gap: 150px;
+        transition: all 0.5s ease;
+        position: relative;
 
         .map-text {
             display: flex;
             flex-direction: column;
+            gap: 45px;
             justify-content: flex-start;
-            margin-top: 100px;
-            /* background-color: red; */
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 200px;
+            opacity: 0;
+            transition: all 0.5s ease;
         }
     }
-    
+
     #map {
         flex: 1;
         height: 100vh;
-        transform: translateY(-50px);
+        transform: translateY(-70px);
         max-width: 700px;
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 0; 
+        margin: 0;
         background-color: transparent;
+        transition: all 0.5s ease;
     }
 
     #region-map {
         width: 400px;
         height: 400px;
-        /* margin-top: auto; */
         background-color: transparent;
+    }
+
+    #map-container.active #map {
+        transform: translate(-300px, -70px);
+    }
+
+    #map-container.active .map-text {
+        opacity: 1;
     }
 
     #tooltip {
@@ -492,8 +568,8 @@ header {
         max-width: 200px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
-    
-    
+
+
 }
 
 
