--- a/style.css
+++ b/style.css
@@ -40,19 +40,22 @@ header {
 
 .header-title-img {
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin: auto;
     height: 100vh;
-    width: 100vw;
-    padding: 0 200px;
+    width: fit-content;
+    /* padding: 0 200px; */
     position: relative;
 
 
     img {
-        width: 70vw;
-        position: absolute;
-        bottom: -5px;
+        width: 80vw;
+        position: relative;
+        top: 5px;
         opacity: 0;
+        margin: 0 auto;
         transform: translateY(50vh);
         transition: opacity 0.5s ease, transform 1s ease;
     }
@@ -74,12 +77,12 @@ header {
 
     h1 {
         position: relative;
+        top: 80px;
         font-family: 'Bebas', sans-serif;
         color: #2A114B;
         font-size: 3rem;
         display: flex;
         flex-direction: column;
-        margin-bottom: 200px;
 
 
         span {
@@ -505,54 +508,59 @@ header {
     }
 
     #map-container {
-        width: 100vw;
         height: 90vh;
-        margin: 0;
         display: flex;
         justify-content: center;
-        gap: 150px;
-        transition: all 0.5s ease;
+        align-items: center;
+        /* Centre verticalement */
         position: relative;
+        gap: 150px;
+        transition: transform 0.5s ease;
 
         .map-text {
             display: flex;
             flex-direction: column;
-            gap: 45px;
+            gap: 2rem;
+            /* Garde un espace fluide */
             justify-content: flex-start;
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            right: 200px;
+            right: 10%;
+            /* Utilisation d'un pourcentage pour éviter les valeurs fixes */
             opacity: 0;
+            display: none;
             transition: all 0.5s ease;
         }
     }
 
     #map {
         flex: 1;
-        height: 100vh;
-        transform: translateY(-70px);
         max-width: 700px;
+        height: 100%;
+        /* S'adapte à la hauteur parent */
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 0;
         background-color: transparent;
-        transition: all 0.5s ease;
+        transition: transform 0.5s ease;
+        transform: translateY(-50px);
     }
 
     #region-map {
         width: 400px;
         height: 400px;
         background-color: transparent;
+        /* display: none; */
     }
 
     #map-container.active #map {
-        transform: translate(-300px, -70px);
+        transform: translate(calc(450px - 50vw), -50px);
     }
 
     #map-container.active .map-text {
         opacity: 1;
+        display: block;
     }
 
     #tooltip {
@@ -710,10 +718,12 @@ footer ul {
 /* Code d'affichage des pop up des mentions légales, sources et contact */
 
 /* Style général pour cacher la modale par défaut */
-.modal1, .modal2, .modal3 {
+.modal1,
+.modal2,
+.modal3 {
     visibility: hidden;
     opacity: 0;
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -725,37 +735,71 @@ footer ul {
     width: 100vw;
     background: rgba(45, 44, 44, 0.5);
     transition: all .4s;
-
 }
 
-.modal1:target, .modal2:target, .modal3:target {
+.no-scroll {
+    overflow: hidden;
+}
+
+.modal1:target,
+.modal2:target,
+.modal3:target {
     visibility: visible;
     opacity: 1;
 }
 
-  /* Contenu de la modale */
-    .mention, .sources, .contact {
-        overflow-y: scroll;
-        background-color: #fff;
-        margin: 15% auto;
-        padding: 30px;
-        border-radius: 8px;
-        width: 700px;
-        height: 500px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        animation: fadeIn 0.5s;
-        scroll-behavior: auto;
+/* Contenu de la modale */
+.mention,
+.sources,
+.contact {
+    overflow-y: scroll;
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 30px;
+    border-radius: 8px;
+    width: 70vw;
+    height: 90vh;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 0.5s;
+    scroll-behavior: auto;
+    font-family: 'Montserrat', sans-serif;
+
+    h1,
+    h2 {
+        font-family: 'Bebas', sans-serif;
+    }
+}
+
+.contact {
+    ul {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        li {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            a {
+                text-decoration: none;
+                color: black;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
     }
 
-        .contact {
-            height: 400px;
-            width: 400px;
-            overflow-y: hidden;
-        }
-  
-  /* Bouton de fermeture */
-  .close {
+    img {
+        width: 25px;
+        height: 25px;
+    }
+}
+
+/* Bouton de fermeture */
+.close {
     color: #2A114B;
     float: right;
     font-size: 2.5rem;
@@ -763,20 +807,20 @@ footer ul {
     text-decoration: none;
     position: sticky;
     top: 2px;
-  }
-  
-  
+}
 
 
-  /* Animation d’apparition */
-  @keyframes fadeIn {
+
+
+/* Animation d’apparition */
+@keyframes fadeIn {
     from {
-      opacity: 0;
-      transform: translateY(-20px);
+        opacity: 0;
+        transform: translateY(-20px);
     }
+
     to {
-      opacity: 1;
-      transform: translateY(0);
+        opacity: 1;
+        transform: translateY(0);
     }
-  }
-  
+}
