Extarnalized data into a JSON

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-family: 'Bebas';
     src: url('./fonts/Bebas.woff') format('woff'),
         url('./fonts/Bebas.woff2') format('woff2');
-}
+}  
 
 *,
 *::after,
@@ -161,26 +161,42 @@ header {
         margin: auto;
     }
 
-    svg path {
-        fill: none;
-        fill-opacity: 0;
-        stroke: white;
-        stroke-width: 2;
-        stroke-dasharray: 1000;
-        stroke-dashoffset: 1000;
-        animation: draw 4s ease forwards;
-        transition: all 0.3s ease;
+    .path1 {
+        display: none;
     }
 
-    @keyframes draw {
-        to {
-            stroke-dashoffset: 0;
-        }
+    path {
+        animation: none;
+      }
+
+    .svg-visible {
+        visibility: visible;
     }
+
+    .svg-hidden {
+        visibility: hidden;
+    }
+
+    path {
+        stroke-dasharray: 0; /* Adjust based on path length */
+        stroke-dashoffset: 0; /* Start hidden */
+        animation: draw 2s linear forwards; /* Default animation */
+        fill: none; /* Optional, ensure only stroke is visible */
+        stroke: white; /* Set stroke color */
+        stroke-width: 2; /* Adjust as needed */
+        fill-opacity: 0;
+        transition: fill-opacity 0.5s ease;
+      }
+      
+      @keyframes draw {
+        to {
+          stroke-dashoffset: 0; /* Fully draw the path */
+        }
+      }
+
 }
 
 /* CODE CSS DU PREMIER GRAPHIQUE */
-
 .section__agression {
     position: relative;
     width: 100vw;
@@ -294,13 +310,15 @@ header {
     }
 
     .section__victime-graph {
-        width: 900px;
+        width: 50%;
+        max-width: 70%;
+        min-width: 50%;
         height: 100%;
         min-height: 400px;
     }
 
     .section__victime-info {
-        /* text-align: right; */
+        max-width: 600px;
         margin-left: 50px;
         margin-right: 70px;
 
@@ -358,6 +376,7 @@ header {
 .section__condamnation {
     position: relative;
     width: 100vw;
+    padding: 0 auto;
 }
 
 
@@ -423,7 +442,7 @@ header {
 .section__condamnation-graph canvas {
     position: absolute;
     top: 250px;
-    left: 500px;
+    right: 50px;
 }
 
 .section__condamnation-button {
